# mina-on-chain-voting

./: .env.example  .gitignore  CHANGELOG.md  Justfile  README.md  cspell.json  docker-compose.yaml  dprint.json  rust-toolchain.toml  rustfmt.toml  words.txt
.github/workflows/: check-rust.yaml  publish.yml
ops/: ManualTestingRoutine.md
proposals/: proposals.json  proposals_schema.json
server/: .env  Cargo.toml  Dockerfile  Dockerfile.dev
server/migrations/2023-08-20-211633_add_initial_schema/: up.sql
server/proposals/: proposals.json  proposals_schema.json
server/src/: archive.rs  cache.rs  config.rs  error.rs  handlers.rs  ledger.rs  lib.rs  main.rs  network_config.rs  ocv.rs  prelude.rs  proposals.rs  ranked_vote copy.rs  ranked_vote.rs  ranked_vote_builder.rs  ranked_vote_config.rs  schema.rs  serve.rs  util.rs  vote.rs  wrapper.rs
server/src/database/: archive.rs  cache.rs  mod.rs
server/src/handlers/: get_info.rs  get_mina_proposal.rs  get_mina_proposal_result.rs  get_mina_proposals.rs  info.rs
server/src/models/: diesel.rs  ledger.rs  vote.rs
server/src/routes/: info.rs  mod.rs  proposal.rs
server/src/util/: cache.rs  caches.rs  s3.rs  shutdown_signal.rs  wrapper.rs
tools/: README.md
vote_script/: Readme.md  main.ts  package-lock.json  package.json  tsconfig.json
web/: .env  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx
web/common/: config.ts
web/components/: layout-footer.spec.tsx  layout-footer.tsx  layout-header.tsx  layout-nav-desktop.tsx  layout-nav-mobile.tsx  mina-logo.tsx  theme-toggle.tsx
