[package]
name = "mina-ocv-server"
version = "0.8.0"
edition = "2021"

[dependencies]
# Core dependencies
axum = { version = "0.6.4", features = ["tower-log"] }
bs58 = { version = "0.4.0", features = ["check"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "numeric"] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
moka = { version = "0.12.0", features = ["future"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility dependencies
anyhow = "1.0.69"
bigdecimal = "0.4.5"
bytes = "1.4.0"
flate2 = "1.0.33"
futures-util = "0.3"
r2d2 = "0.8.10"
rust_decimal = "1.28.0"
tar = "0.4.41"
