[package]
name = "mina-ocv"
version = "0.14.7"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
aws-sdk-s3 = "1.51.0"
axum = { version = "0.7.5", features = ["macros"] }
bigdecimal = "0.4.5"
bs58 = { version = "0.4.0", features = ["check"] }
bytes = "1.9.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = ["full"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "numeric"] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
flate2 = "1.0.33"
futures-util = "0.3"
moka = { version = "0.12.0", features = ["future"] }
r2d2 = "0.8.10"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
rust_decimal = "1.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.135"
tar = "0.4.41"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
